# jami-client-macos

./: .CMakeLists.txt.swp  .gitignore  .gitmodules  .gitreview  .packer.yml  AccAdvanced.xib  AccAdvancedVC.h  AccAdvancedVC.mm  AccAudio.xib  AccAudioVC.h  AccAudioVC.mm  AccGeneral.xib  AccGeneralVC.h  AccGeneralVC.mm  AccRing.xib  AccRingVC.h  AccRingVC.mm  AccSecurity.xib  AccSecurityVC.h  AccSecurityVC.mm  AccVideo.xib  AccVideoVC.h  AccVideoVC.mm  AccountDetailsVC.h  AccountDetailsVC.mm  Accounts.xib  AccountsVC.h  AccountsVC.mm  AddressBookBackend.mm  AppDelegate.h  AppDelegate.mm  AudioPrefs.xib  AudioPrefsVC.h  AudioPrefsVC.mm  CMakeLists.txt  CallView.h  CallView.mm  ConversationsViewController.h  ConversationsViewController.mm  Credits.rtf  (+58 more)
.tx/: config
RingTests/: CocoaExampleTests.mm
build-local/: CMakeCache.txt
cmake/: MacOSXBetaBundleInfo.plist.in  MacOSXBettaBundleInfo.plist.in  MacOSXBundleInfo.plist.in  MacOSXBundleInfo14.plist.in  MacOSXLauncherBundleInfo.plist.in
data/: Ring.entitlements  appicon.icns  entitlements.plist
data/HardenedRuntimeEntitlements/: Jami.entitlements
sparkle/: 0001-builddir-use-predefined-BUILDDIR.patch  dsa_pub.pem  dsa_pub_ring.pem  sign_update.sh  sparkle-xml-updater.sh
src/: AbstractLoadingCV.h  AbstractLoadingCV.mm  AbstractLoadingWC.h  AbstractLoadingWC.mm  AccAdvancedRingVC.h  AccAdvancedRingVC.mm  AccAdvancedSipVC.h  AccAdvancedSipVC.mm  AccAdvancedVC.h  AccAdvancedVC.mm  AccAudioVC.h  AccAudioVC.mm  AccBannedContactsVC.h  AccBannedContactsVC.mm  AccContactsVC.h  AccContactsVC.mm  AccDevicesVC.h  AccDevicesVC.m  AccDevicesVC.mm  AccGeneralVC.h  AccGeneralVC.mm  AccMediaVC.h  AccMediaVC.mm  AccRingGeneralVC.h  AccRingGeneralVC.mm  AccRingVC.h  AccRingVC.mm  AccSecurityVC.h  AccSecurityVC.mm  AccSipGeneralVC.h  AccSipGeneralVC.mm  AccVideoVC.h  AccVideoVC.mm  AccountBackupVC.h  AccountBackupVC.mm  AccountChangingVC.h  AccountChangingVC.mm  AccountSelectionManager.h  AccountSelectionManager.mm  AccountSettingsVC.h  (+146 more)
src/backends/: AddressBookBackend.h  AddressBookBackend.mm  MinimalHistoryBackend.h  MinimalHistoryBackend.mm
src/delegates/: ImageManipulationDelegate.cpp  ImageManipulationDelegate.h  ImageManipulationDelegate.mm
src/views/: AccountMenuItemView.h  AccountMenuItemView.mm  BackgroundView.h  BackgroundView.mm  CallLayer.h  CallLayer.mm  CallMTKView.h  CallMTKView.mm  CallOpenGLview.h  CallOpenGLview.mm  CallView.h  CallView.mm  CenteredClipView.h  CenteredClipView.mm  ConferenceOverlayView.h  ConferenceOverlayView.mm  ContactRequestCellView.h  ContactRequestCellView.mm  ContextualTableCellView.h  ContextualTableCellView.mm  ConversationTable.h  ConversationTable.mm  CustomBackgroundView.h  CustomBackgroundView.mm  DraggingDestinationView.h  DraggingDestinationView.mm  FileToSendCollectionItem.h  FileToSendCollectionItem.mm  GradientView.h  GradientView.mm  HighlightableImageButton.h  HighlightableImageButton.mm  HighligtableImageButton.h  HighligtableImageButton.mm  HoverButton.h  HoverButton.mm  HoverTableRowView.h  HoverTableRowView.mm  IMTableCellView.h  IMTableCellView.mm  (+48 more)
ui/: AccAdvanced.xib  AccAudio.xib  AccGeneral.xib  AccRing.xib  AccSecurity.xib  AudioPrefs.xib  CurrentCall.xib  GeneralPrefs.xib  MainMenu.xib  PersonEditor.xib  PersonLinker.xib  PreferencesScreen.xib  PreferencesWindow.xib  RingWindow.xib  RingWizard.xib  Transfer.xib  VideoPrefs.xib
ui/Base.lproj/: AccAdvanced.strings  AccAdvanced.xib  AccAdvancedRing.strings  AccAdvancedRing.xib  AccAdvancedSip.strings  AccAdvancedSip.xib  AccAudio.strings  AccAudio.xib  AccBannedContacts.xib  AccContacts.xib  AccDevices.strings  AccDevices.xib  AccGeneral.strings  AccGeneral.xib  AccMedia.strings  AccMedia.xib  AccRing.strings  AccRing.xib  AccRingGeneral.strings  AccRingGeneral.xib  AccSecurity.strings  AccSecurity.xib  AccSipGeneral.strings  AccSipGeneral.xib  AccVideo.strings  AccVideo.xib  AccountBackupVC.strings  AccountBackupVC.xib  AccountChanging.xib  AccountMenuItemView.xib  AccountSettings.strings  AccountSettings.xib  Accounts.strings  Accounts.xib  AddSIPAccountVC.strings  AddSIPAccountVC.xib  AudioPrefs.strings  AudioPrefs.xib  BackupAccountWindow.strings  BackupAccountWindow.xib  (+83 more)
ui/ar.lproj/: AccAdvanced.strings  AccAdvancedRing.strings  AccAdvancedSip.strings  AccAudio.strings  AccGeneral.strings  AccMedia.strings  AccRing.strings  AccRingGeneral.strings  AccSecurity.strings  AccSipGeneral.strings  AccVideo.strings  AccountBackupVC.strings  AccountMenuItemView.strings  AccountSettings.strings  Accounts.strings  AddSIPAccountVC.strings  AudioPrefs.strings  BackupAccountWindow.strings  CertificateWindow.strings  ConnectToAccManagerVC.strings  Conversation.strings  CurrentCall.strings  ExportPasswordWindow.strings  GeneralPrefs.strings  LeaveMessageVC.strings  Localizable.strings  MainMenu.strings  MessageCells.strings  MigrateRingAccountsWindow.strings  PasswordChange.strings  PersonLinker.strings  PreferencesWindow.strings  RegisterNameWindow.strings  RingWindow.strings  RingWizard.strings  RingWizardChoose.strings  RingWizardLinkAccount.strings  RingWizardNewAccount.strings  VideoPrefs.strings
ui/ar_EG.lproj/: AccRingGeneral.strings  AccountBackupVC.strings  AddSIPAccountVC.strings  CertificateWindow.strings  ConnectToAccManagerVC.strings  Conversation.strings  CurrentCall.strings  ExportPasswordWindow.strings  GeneralPrefs.strings  Localizable.strings  MessageCells.strings  MigrateRingAccountsWindow.strings  PasswordChange.strings  RegisterNameWindow.strings  RingWizardChoose.strings  RingWizardLinkAccount.strings  RingWizardNewAccount.strings
ui/az.lproj/: AccountBackupVC.strings  AddSIPAccountVC.strings  CertificateWindow.strings  ConnectToAccManagerVC.strings  Conversation.strings  CurrentCall.strings  ExportPasswordWindow.strings  GeneralPrefs.strings  Localizable.strings  MessageCells.strings  MigrateRingAccountsWindow.strings  PasswordChange.strings  RegisterNameWindow.strings  RingWizardChoose.strings  RingWizardLinkAccount.strings  RingWizardNewAccount.strings
ui/be.lproj/: AddSIPAccountVC.strings  (+5 more)
(+2446 files in other folders)
